# mq9

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: deploy.yml  release.yml  test.yml
csharp/: mq9.sln
csharp/Mq9/: Client.cs  Errors.cs  Mq9.csproj  Types.cs
csharp/Mq9.Tests/: ClientTests.cs  Mq9.Tests.csproj
demo/: README.md
demo/csharp/: AgentDemo.cs  MessageDemo.cs  Program.cs  README.md  demo.csproj
demo/go/: README.md  agent_demo.go  message_demo.go
demo/java/: A2ADemo.java  AgentDemo.java  MessageDemo.java  README.md
demo/javascript/: README.md  agent_demo.ts  message_demo.ts
demo/python/: README.md  a2a_demo.py  agent_demo.py  langchain_demo.py  message_demo.py
demo/rust/: Cargo.toml  README.md
docs/: for-agent.md  for-engineer.md  what.md
docs/.vitepress/: config.mts
docs/public/: CNAME
go/: client.go  client_test.go  errors.go  go.mod  types.go
java/: pom.xml
javascript/: package-lock.json  package.json  tsconfig.json
javascript/src/: client.ts  index.ts
javascript/tests/: client.test.ts
langchain-mq9/: pyproject.toml
langchain-mq9/examples/: langchain_agent.py  langgraph_agent.py
langchain-mq9/langchain_mq9/: __init__.py  toolkit.py  tools.py
langchain-mq9/tests/: test_tools.py
python/: README.md  pyproject.toml
python/mq9/: __init__.py  client.py
python/tests/: test_client.py
rust/: Cargo.toml
rust/src/: client.rs  error.rs  lib.rs  types.rs
rust/tests/: client_test.rs
website/: for-agent.md  for-engineer.md  index.md  what.md
website/.vitepress/: config.mts
website/docs/: a2a.md  (+17 more)
(+70 files in other folders)
