[package]
name = "mq9"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for the mq9 NATS-based Agent messaging broker"
license = "MIT"
repository = "https://github.com/robustmq/robustmq-mq9"
keywords = ["mq9", "nats", "messaging", "agent", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-nats = "0.38"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tracing-subscriber = "0.3"
